--- a/css/style.css
+++ b/css/style.css
@@ -292,7 +292,7 @@ body {
   line-height: 1.6;
   /* Múltiples backgrounds: primero la imagen, luego el gradiente de colores */
   background-image: 
-    url('/img/woman.svg'),
+    url('../img/woman.svg'),
     linear-gradient(to right, white 0%, white 60%, #A9D6CB 60%, #A9D6CB 100%);
   background-size: 
     75rem auto,   /* Tamaño de la imagen (1200px = 75rem) */
